# NorthStarSDK

./: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.examples.json
.github/workflows/: release.yml  test.yml
examples/live-price-feed/: README.md  server.ts
examples/live-price-feed/public/: index.html
router/: .gitignore  Cargo.toml
router/programs/router/: Cargo.toml
router/programs/router/src/: events.rs  lib.rs  types.rs  utils.rs
router/programs/router/src/instructions/: close_expired.rs  deposit_fee.rs  open_session.rs  send.rs
router/programs/router/src/state/: outbox.rs  session.rs
router/router-tests/: Cargo.toml
router/router-tests/tests/: router_test_main.rs
router/tests/: router.ts
src/: index.ts
src/builders/: TransactionBuilder.ts
src/config/: networks.ts
src/programs/: portal.ts
src/readers/: AccountResolver.ts  EphemeralRollupReader.ts  HSSNReader.ts
src/session/: SessionManager.ts
src/solana/: kitCompat.ts
src/types/: index.ts
src/utils/: common.ts  livePriceFeed.ts  pda.ts
tests/: AccountResolver.test.ts  delegate.test.ts  integration.test.ts  live-price-feed.test.ts  northstar-service.integration.test.ts  portal.test.ts  real-integration.test.ts  sol-bridge.test.ts
tests/bak/: AccountResolver.ts  integration.ts
tests/helpers/: localValidator.ts
