[workspace]
members = ["programs/*", "router-tests"]
resolver = "2"

# Separate very slow profile with lots of opinionated optimizations
[profile.production]
inherits = "release"
lto = "fat"
opt-level = 3
incremental = false
codegen-units = 1

[workspace.lints.clippy]
arithmetic_side_effects = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
