[workspace]
members = ["programs/*", "router-tests"]
resolver = "2"


[workspace.dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1" }
solana-sdk = "2.1"
solana-program = "2.1"
solana-program-test = "2.1"
solana-banks-client = "2.1"
solana-banks-server = "2.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# Separate very slow profile with lots of opinionated optimizations
[profile.production]
inherits = "release"
lto = "fat"
opt-level = 3
incremental = false
codegen-units = 1

[workspace.lints.clippy]
arithmetic_side_effects = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
