[package]
name = "router-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
router = { path = "../programs/router", features = ["cpi"] }
anchor-lang = { workspace=true }
anchor-spl = { workspace=true }
solana-sdk =  {workspace = true}
solana-program = {workspace =true}
solana-program-test = {workspace = true}
solana-banks-client = {workspace = true}
solana-banks-server = {workspace = true}
tokio = {workspace=true }
serde = { workspace = true}
serde_json = {workspace = true}
anyhow = {workspace = true}

